compiler/tests/success/risc-v/intrinsic_add.jazz
export
fn add(reg u32 arg0, reg u32 arg1) -> reg u32 {
    reg u32 x;

    // Registers.
    x = #ADD(arg0, arg1);
    [x] = x;

    // Immediates.
    x = #ADDI(arg0, 1);
    [x] = x;
    x = #ADDI(arg0, -1);
    [x] = x;
    x = #ADDI(arg0, -2048);
    x = #ADDI(x, 0);
    [x] = x;
    x = #ADDI(arg0,  2047);
    [x] = x;

    reg u32 res;
    res = x;
    return res;
}
