compiler/tests/fail/x86-64/unaligned-sse-aeskeygenassist.jazz
export fn aeskeygenassist(reg ptr u8[17] a) -> reg u128 {
  reg u128 z = #AESKEYGENASSIST(a.[#unaligned:u128 1], 0);
  return z;
}

